# Pedestrian_attributes_detection

./: .gitattributes  CMakeLists.txt  package.xml
launch/: zed_tracking_attribution.launch
model/: human_attribute_recognition.engine
src/: inference.cc
